@@ -1,17 +1,15 @@
 package com.openlattice.integrations.pennington;
 
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
-import com.google.common.collect.Lists;
 import com.openlattice.client.RetrofitFactory;
 import com.openlattice.data.UpdateType;
+import com.openlattice.integrations.pennington.configurations.ManualPSAIntegrationConfiguration;
+import com.openlattice.integrations.pennington.utils.County;
 import com.openlattice.integrations.pennington.utils.EdmConstants;
 import com.openlattice.integrations.pennington.utils.IntegrationAliases;
 import com.openlattice.shuttle.Flight;
 import com.openlattice.shuttle.MissionControl;
 import com.openlattice.shuttle.adapter.Row;
-import com.openlattice.shuttle.dates.DateTimeHelper;
 import com.openlattice.shuttle.dates.JavaDateTimeHelper;
 import com.openlattice.shuttle.dates.TimeZones;
 import com.openlattice.shuttle.payload.Payload;
@@ -428,8 +426,7 @@ public class ManualPsaIntegration {
                 "https://openlattice-media-storage.s3.us-gov-west-1.amazonaws.com" );
         Map<Flight, Payload> flights = new HashMap<>( 1 );
         flights.put( psaFlight, payload );
-
-        missionControl.prepare( flights, false, ImmutableList.of(), ImmutableSet.of() ).launch( 10000 );
+        missionControl.prepare( flights, false, List.of(), Set.of() ).launch( 150 );
         MissionControl.succeed();
     }
 
